Added link to code coverage

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <a id="batoru-royale" class="anchor" href="#batoru-royale" aria-hidden="true"><span class="octicon octicon-link"></span></a>batoru-royale</h1>
 
 <p><a href="https://travis-ci.org/Ishino/batoru-royale"><img src="https://travis-ci.org/Ishino/batoru-royale.svg?branch=master" alt="Build Status"></a></p>
+<p><a href="cover/index.html">Code Coverage</a></p>
 
 <p>Learning Python the fun way.</p>
 
